--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
@@ -15,6 +16,8 @@
     "material-ui": "^0.19.4",
     "mongoose": "^4.13.5",
     "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
