--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react": "^16.2.0",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
     "react-router": "^4.2.0",
